site-hugo/content/xap/9.7/dev-dotnet/modeling-your-data.markdown
---
type: post97
title:  Modeling your Data
categories: XAP97NET
parent: programmers-guide.html
weight: 300
canonical: auto
---


Modeling your objects that are used to interact with the space.


<hr/>

- [Space Object ID](./poco-object-id.html){{<wbr>}}
When a new object is inserted into the space, it embeds a unique ID - called the UID. The UID can be generated explicitly by the client using a unique value generated by the application business logic or using a sequencer running within the space.

- [Annotation based Metadata](./pono-annotation-overview.html){{<wbr>}}
The XAP API supports class  and properties decorations with POJOs. These can be specified via annotations on the space class source itself. You can define common behavior for all class instances, and specific behavior for class fields.

- [XML based Metadata](./pono-xml-metadata-overview.html){{<wbr>}}
Class and properties  decorations for POJOs  can be specified via an external xml file accompanied with the class byte code files located within the jar/war. You can define common behavior for all class instances, and specific behavior for class fields.

- [Storage Types](./poco-storage-type.html){{<wbr>}}
To reduce the memory footprint of the objects stored in space, different storage types can be defined for individual properties of a space class. Object properties can be assigned a storage type decoration which determines how it is serialized and stored in the space.

- [Type Discovery](./poco-type-discovery.html){{<wbr>}}
Controlling data type discovery.

- [Routing Property](./routing-in-partitioned-spaces.html){{<wbr>}}
A partitioned space provides the ability to perform space operations against multiple spaces from a single proxy transparently. The primary goal of the partitioned space is to provide unlimited In-Memory space storage size and group objects into the same partition to speed up performance. The initial intention is to write data into the partitioned space, and route query operations based on the template data. In order to accomplish that, a routing property can be defined on the entry type.
<hr/>



